cmake_minimum_required(VERSION 3.9)
project(LeetCode)
set(CMAKE_CXX_STANDARD 11)

#链接库
aux_source_directory(leetcode/editor/cn/include LEETCODE)
add_library(leetcode ${LEETCODE})
LINK_LIBRARIES(leetcode)




add_executable(146-lru-cache leetcode/editor/cn/146-lru-cache.cpp)
add_executable(206-reverse-linked-list leetcode/editor/cn/206-reverse-linked-list.cpp)
add_executable(21-merge-two-sorted-lists leetcode/editor/cn/21-merge-two-sorted-lists.cpp)
add_executable(24-swap-nodes-in-pairs leetcode/editor/cn/24-swap-nodes-in-pairs.cpp)
add_executable(160-intersection-of-two-linked-lists leetcode/editor/cn/160-intersection-of-two-linked-lists.cpp)
add_executable(234-palindrome-linked-list leetcode/editor/cn/234-palindrome-linked-list.cpp)
add_executable(Offer-09 leetcode/editor/cn/Offer-09.cpp)
add_executable(Offer-30 leetcode/editor/cn/Offer-30.cpp)
add_executable(Offer-06 leetcode/editor/cn/Offer-06.cpp)
add_executable(Offer-24 leetcode/editor/cn/Offer-24.cpp)
add_executable(Offer-35 leetcode/editor/cn/Offer-35.cpp)
add_executable(Offer-05 leetcode/editor/cn/Offer-05.cpp)
add_executable(Offer-58-II leetcode/editor/cn/Offer-58-II.cpp)
add_executable(Offer-53-II leetcode/editor/cn/Offer-53-II.cpp)
add_executable(Offer-53-I leetcode/editor/cn/Offer-53-I.cpp)
add_executable(Offer-03 leetcode/editor/cn/Offer-03.cpp)
add_executable(19-remove-nth-node-from-end-of-list leetcode/editor/cn/19-remove-nth-node-from-end-of-list.cpp)
add_executable(83-remove-duplicates-from-sorted-list leetcode/editor/cn/83-remove-duplicates-from-sorted-list.cpp)
add_executable(Offer-11 leetcode/editor/cn/Offer-11.cpp)
add_executable(Offer-04 leetcode/editor/cn/Offer-04.cpp)
add_executable(Offer-50 leetcode/editor/cn/Offer-50.cpp)
add_executable(Offer-32-I leetcode/editor/cn/Offer-32-I.cpp)
add_executable(Offer-32-III leetcode/editor/cn/Offer-32-III.cpp)
add_executable(Offer-32-II leetcode/editor/cn/Offer-32-II.cpp)
add_executable(Offer-26 leetcode/editor/cn/Offer-26.cpp)
add_executable(Offer-27 leetcode/editor/cn/Offer-27.cpp)
add_executable(Offer-28 leetcode/editor/cn/Offer-28.cpp)
add_executable(Offer-10-I leetcode/editor/cn/Offer-10-I.cpp)
add_executable(Offer-10-II leetcode/editor/cn/Offer-10-II.cpp)
add_executable(Offer-63 leetcode/editor/cn/Offer-63.cpp)
add_executable(Offer-42 leetcode/editor/cn/Offer-42.cpp)
add_executable(Offer-47 leetcode/editor/cn/Offer-47.cpp)